--- a/Clock/Delete.html
+++ b/Clock/Delete.html
@@ -57,6 +57,6 @@
           <a class="btn btn-primary btn-lg" href="#" role="button">Browse Times</a>
         </p>
       </div>
-      <script src="Delete.js"></script>
+      <script src="D:\Files\JavaScript\Clock\Delete.js"></script>
 </body>
 </html>
