made changes in design

--- a/Clock/Delete.html
+++ b/Clock/Delete.html
@@ -11,7 +11,7 @@
 <body>
     <!-- NAVBAR -->
     <nav class="navbar  navbar-expand-lg  backgroundGradient ">
-        <a class="navbar-brand effect whitetext effect" href="#"><b><i>Clock BLock</i></b></a>
+        <a class="navbar-brand effect buldge whitetext effect mx-4" href="#"><b><i>Clock BLock</i></b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -19,22 +19,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link effect whitetext" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link buldge effect whitetext" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link effect whitetext" href="#">Blogs</a>
+              <a class="nav-link buldge effect whitetext" href="#">Blogs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link effect whitetext" href="#">LinkedIn</a>
+              <a class="nav-link buldge effect whitetext" href="#">LinkedIn</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link effect whitetext" href="#">Github</a>
+              <a class="nav-link buldge effect whitetext" href="#">Github</a>
             </li>
             </li>
             
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search In The Website" aria-label="Search">
+            <input class="form-control buldge mr-sm-2" type="search" placeholder="Search In The Website" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
@@ -45,13 +45,13 @@
       <div class="jumbotron">
         <h1 class="display-4">Current Time Is => <span id="time"></span></h1>
         <h2 class=>Date:  <span id="day"></span></h2>
-        <p class="lead">This project has been designed with basic HTML and Javascript. Thank you for your time.</p>
+        <p class="lead">This project has been designed with basic HTML and Javascript. Thank you for checking it out.</p>
         <hr class="my-4">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fugiat eaque laboriosam eum dolorum aspernatur consectetur, asperiores sequi architecto alias aperiam accusamus recusandae ipsa repellat natus vel dolores adipisci mollitia?</p>
+        <p class="largefont">Are you tired of constantly checking your phone or computer to see what time it is? Look no further! Our website provides you with the exact time, all with just a click of a button. No more second-guessing or wondering if your device's clock is accurate. Our website is synced with the most precise time servers in the world, ensuring that you receive the most accurate and up-to-date time possible. Whether you're a busy professional with a packed schedule or simply someone who wants to stay on track, our website makes it easy to stay in sync with the world around you. Try it out today and experience the convenience of having the exact time at your fingertips!</p>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Browse Times</a>
+          <a class="btn btn-primary btn-lg buldge" href="#" role="button">Browse Times</a>
         </p>
       </div>
-      <script src="D:\Files\JavaScript\Clock\Delete.js"></script>
+      <script src="Delete.js"></script>
 </body>
 </html>
